--- a/terraform/stage/terraform.tfvars.example
+++ b/terraform/stage/terraform.tfvars.example
@@ -3,7 +3,8 @@ token     = "---"
 cloud_id  = "---"
 folder_id = "---"
 zone = "ru-central1-a"
-public_key_path = "~/ubuntu.pub"
 app_disk_image  = "fd89aoebgs0o0127ouur"      
 db_disk_image = "fd8h22cnb2i327bcvim6"
 subnet_id       = "e9busgcgopum2hiasp01"
+public_key_path          = "~/.ssh/appuser.pub"
+private_key              = "~/.ssh/appuser"
