--- a/terraform/stage/terraform.tfvars.example
+++ b/terraform/stage/terraform.tfvars.example
@@ -1,10 +1,8 @@
-
-token     = "---"
-cloud_id  = "---"
-folder_id = "---"
-zone = "ru-central1-a"
-app_disk_image  = "fd89aoebgs0o0127ouur"      
-db_disk_image = "fd8h22cnb2i327bcvim6"
-subnet_id       = "e9busgcgopum2hiasp01"
+cloud_id                 = "0000000"
+folder_id                = "0000000"
+zone                     = "ru-central1-a"
+image_id                 = "0000000"
 public_key_path          = "~/.ssh/appuser.pub"
-private_key              = "~/.ssh/appuser"
+private_key              = "~/ssh/appuser"
+subnet_id                = "0000000"
+service_account_key_file = "key.json"
