--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -1,10 +1,8 @@
-
-token     = "y0_AgAAAczczxczxcAAiV-6RAATuwQAAAADc8_Bu_N3dDkWeSfSy4Xb93_Nm-YXWrkc"
-cloud_id  = "b1ges86tbese73mejzxczxczxczx7is"
-folder_id = "b1gktbr7v8hg47vu56zxczxczxcvu"
-zone = "ru-central1-a"
+cloud_id                 = "0000000"
+folder_id                = "0000000"
+zone                     = "ru-central1-a"
+image_id                 = "0000000"
 public_key_path          = "~/.ssh/appuser.pub"
-private_key              = "~/.ssh/appuser"
-app_disk_image  = "fd89aoebgs0o0127ouur"     
-db_disk_image = "fd8h22cnb2i327bcvim6"
-subnet_id       = "e9busgcgopum2hiasp01"
+private_key              = "~/ssh/appuser"
+subnet_id                = "0000000"
+service_account_key_file = "key.json"
