--- a/packer/app.json
+++ b/packer/app.json
@@ -21,7 +21,7 @@
 "provisioners": [
 	{
 		"type": "shell",
-		"script": "packer/scripts/install_ruby.sh",
+		"script": "scripts/install_ruby.sh",
 		"execute_command": "sudo {{.Path}}",
 		"pause_before": "60s"
 			}
