--- a/packer/app.json
+++ b/packer/app.json
@@ -17,15 +17,12 @@
 			}
 		],
 
-
 "provisioners": [
-	{
-		"type": "shell",
-		"script": "scripts/install_ruby.sh",
-		"execute_command": "sudo {{.Path}}",
-		"pause_before": "60s"
-			}
-	]	
+    {
+        "type": "ansible",
+        "playbook_file": "ansible/packer_app.yml"
+    }
+]
 	
 }
 
