--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
 	"folder": "somefolderid",
-	"secret": "somekey.json",
+	"secret": "key.json",
 	"source": "ubuntu-1604-lts",
 	"imgFamily": "reddit-base"
 }
