--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,13 @@
 [defaults]
-inventory = ./inventory
+inventory = ./environments/prod/inventory
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
 host_key_checking = False
 retry_files_enabled = False
+roles_path = ./roles
+vault_password_file = vault.key
+
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+context = 5
