--- a/ansible/roles/app/tasks/puma.yml
+++ b/ansible/roles/app/tasks/puma.yml
@@ -1,14 +1,16 @@
 ---
 - name: Add unit file for Puma
-  template:
-   src: puma.service.j2
-   dest: /etc/systemd/system/puma.service
+  copy:
+    src: puma.service
+    dest: /etc/systemd/system/puma.service
   notify: reload puma
-- name: Add config for DB connection 
+
+- name: Add config for DB connection
   template:
-   src: db_config.j2
-   dest: "/home/{{ deploy_user }}/db_config" 
-   owner: "{{ deploy_user }}"
-   group: "{{ deploy_user }}"
+    src: db_config.j2
+    dest: /home/appuser/db_config
+    owner: appuser
+    group: appuser
+
 - name: enable puma
   systemd: name=puma enabled=yes
